--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:service="clr-namespace:WSUI.Module.Service"
-             xmlns:ctrl="clr-namespace:WSUI.Infrastructure.Controls;assembly=WSUI.Infrastructure"                   
+             xmlns:ctrl="clr-namespace:WSUI.Infrastructure.Controls;assembly=WSUI.Infrastructure"                  
+                    xmlns:converters="clr-namespace:WSUI.Infrastructure.Converters;assembly=WSUI.Infrastructure" 
                     
                     >
     <ResourceDictionary.MergedDictionaries>
@@ -19,6 +20,7 @@
     <service:SizebytesToStringConverter x:Key="sizeConverter"  />
     <service:ObjectToNameConverter x:Key="objectConverter" />
     <service:ActualWidthToWidthConverter x:Key="ActualWidthConverter" />
+    <converters:StringToStringConverter x:Key="StringConverter" />
         
     <Style x:Key="ImageStyle" TargetType="{x:Type Image}">
         <Setter Property="Width"  Value="16"/>
@@ -77,7 +79,7 @@
             <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
                                             Grid.Column="2"  Margin="5" ></ctrl:HightliteTextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"-->
 
-                <ctrl:HightliteTextBlock Text="{Binding Path=Name}"  Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
+            <ctrl:HightliteTextBlock Text="{Binding Path=Name,Converter={StaticResource ResourceKey=StringConverter}}"  Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
                                             Grid.Column="3"   Margin="5"></ctrl:HightliteTextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"--> 
             
             <TextBlock Grid.Column="4"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
