--- a/WSUI.Module/View/AttachmentDataView.xaml
+++ b/WSUI.Module/View/AttachmentDataView.xaml
@@ -21,6 +21,7 @@
                  SelectedItem="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  ContextMenu="{StaticResource ResourceKey=contextMenu}"
                  ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
+                 service:DoubleClickBehabior.DoubleClickHandler="{Binding DoubleClickCommand}"
                  >
 
         </ListBox>
