--- a/WSUI.Module/View/ContactDataView.xaml
+++ b/WSUI.Module/View/ContactDataView.xaml
@@ -122,6 +122,7 @@
                  SelectedItem="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
                  ScrollViewer.ScrollChanged="ListBox_ScrollChanged_1"
+                 service:DoubleClickBehabior.DoubleClickHandler="{Binding DoubleClickCommand}"
                  >
 
         </ListBox>
