--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -55,7 +55,7 @@
 
             <Image Grid.Column="0" Source="..\Images\document-smiley-sad.png" Style="{StaticResource ImageStyle}" />
 
-            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+            <ctrl:HightliteTextBlock Text="{Binding Path=ItemName}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                             Grid.Column="1" Margin="5"/>
         </Grid>
         
@@ -79,10 +79,10 @@
             <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
                                             Grid.Column="2"  Margin="5" ></ctrl:HightliteTextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"-->
 
-            <ctrl:HightliteTextBlock Text="{Binding Path=Name,Converter={StaticResource ResourceKey=StringConverter}}"  Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
-                                            Grid.Column="3"   Margin="5"></ctrl:HightliteTextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"--> 
-            
-            <TextBlock Grid.Column="4"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
+            <ctrl:HightliteTextBlock Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"  Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
+                                            Grid.Column="3"   Margin="5"></ctrl:HightliteTextBlock><!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"-->
+
+            <TextBlock Grid.Column="4"  Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
         </Grid>
         
     </DataTemplate>
@@ -128,19 +128,19 @@
             </Grid.ColumnDefinitions>
             <Grid.ToolTip>
                 <StackPanel Orientation="Vertical">
-                    <TextBlock Text="{Binding Path=Path}" />
+                    <TextBlock Text="{Binding Path=ItemUrl}" />
                     <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                 </StackPanel>
             </Grid.ToolTip>
 
-            <Image  Source="{Binding Path=Name,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" 
+            <Image  Source="{Binding Path=ItemName,Converter={StaticResource ResourceKey=nameConverter}}" Style="{StaticResource ImageStyle}" 
                     Grid.Column="0"/>
             <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+            <ctrl:HightliteTextBlock Text="{Binding Path=ItemName}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="2" Grid.ColumnSpan="2"  Margin="5"/>
 
-            <TextBlock Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Grid.Column="4" Foreground="Black"/>
+            <TextBlock Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}"  Margin="5" Grid.Column="4" Foreground="Black"/>
 
         </Grid>
         
@@ -157,7 +157,7 @@
             </Grid.ColumnDefinitions>
             <Grid.ToolTip>
                 <StackPanel Orientation="Vertical">
-                    <TextBlock Text="{Binding Path=Path}" />
+                    <TextBlock Text="{Binding Path=ItemUrl}" />
                     <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
                 </StackPanel>
             </Grid.ToolTip>
@@ -185,7 +185,7 @@
             <Image Grid.Column="0" Source="..\Images\date.png" Style="{StaticResource ImageStyle}" />
             <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+            <ctrl:HightliteTextBlock Text="{Binding Path=ItemName}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="2"   Margin="5"/>
             <TextBlock Grid.Column="3"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
         </Grid>
@@ -199,12 +199,18 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
+            <Grid.ToolTip>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=ItemUrl}" />
+                    <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                </StackPanel>
+            </Grid.ToolTip>
             <Image Grid.Column="0" Source="..\Images\pictures.png" Style="{StaticResource ImageStyle}" />
             <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="5"
                            Grid.Column="1"></TextBlock>
-            <ctrl:HightliteTextBlock Text="{Binding Path=Name}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
+            <ctrl:HightliteTextBlock Text="{Binding Path=ItemName}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"  
                                                         Grid.Column="2"   Margin="5"/>
-            <TextBlock Grid.Column="3"  Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
+            <TextBlock Grid.Column="3"  Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
         </Grid>
     </DataTemplate>
     
