--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -92,9 +92,9 @@
             <DataTrigger Binding="{Binding Count}" Value="0">
                 <Setter Property="Visibility" Value="Hidden"></Setter>
             </DataTrigger>
-            <DataTrigger Binding="{Binding Count}" Value="1">
+            <!--<DataTrigger Binding="{Binding Count}" Value="1">
                 <Setter Property="Visibility" Value="Hidden"></Setter>
-            </DataTrigger>
+            </DataTrigger>-->
         </Style.Triggers>
     </Style>
     
@@ -172,7 +172,7 @@
     </DataTemplate>
 
     <DataTemplate x:Key="EmailItemTemplate">
-        <Grid HorizontalAlignment="Stretch" Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}},Path=ActualWidth,Converter={StaticResource ActualWidthConverter}}">
+        <Grid HorizontalAlignment="Stretch" Margin="8 0 0 0" Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBox}},Path=ActualWidth,Converter={StaticResource ActualWidthConverter}}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}"/>
@@ -180,21 +180,24 @@
                 <ColumnDefinition Width="0.75*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-
+            <Grid.ToolTip>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=ItemUrl}" />
+                    <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                </StackPanel>
+            </Grid.ToolTip>
+            
             <Image Grid.Column="0" Source="..\Images\mail.png" Style="{StaticResource ImageStyle}" />
 
             <TextBlock Text="{Binding Count,Converter={StaticResource countConverter}}" FontWeight="Bold" Foreground="Red" Margin="0 3 0 3"
                            Grid.Column="1"></TextBlock>
-            <!--ctrl:HightliteTextBlock-->
             <ctrl:HightliteTextBlock Text="{Binding Path=Recepient}" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
                                             Grid.Column="2"  Margin="5" ></ctrl:HightliteTextBlock>
-            <!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"-->
 
             <ctrl:HightliteTextBlock Text="{Binding Path=ItemName,Converter={StaticResource ResourceKey=StringConverter}}"  Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"
                                             Grid.Column="3"   Margin="5"></ctrl:HightliteTextBlock>
-            <!--Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}"-->
 
-            <TextBlock Grid.Column="4"  Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"  Margin="5" Foreground="Black"/>
+            <TextBlock Grid.Column="4"  Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"  Margin="5 5 1 5" Foreground="Black"/>
         </Grid>
 
     </DataTemplate>
@@ -205,6 +208,12 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            <Grid.ToolTip>
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{Binding Path=ItemUrl}" />
+                    <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                </StackPanel>
+            </Grid.ToolTip> 
             <Expander Margin="0" Grid.Column="0" Style="{StaticResource EmailExpanderStyle}" ExpandDirection="Down">
                 <Grid>
                     <ListBox ItemsSource="{Binding Items}" 
