--- a/WSUI.Infrastructure/Controls/ProgressManager/ProgressWindow.xaml
+++ b/WSUI.Infrastructure/Controls/ProgressManager/ProgressWindow.xaml
@@ -7,7 +7,7 @@
              WindowStyle="None"
             ResizeMode="NoResize"
              ShowInTaskbar="False" 
-             Height="250" Width="300" Topmost="True" >
+             Height="250" Width="300" >
     <Window.Resources><!--Controls:MetroWindow-->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
