--- a/WSUI.Module/View/AllFilesSettingsView.xaml
+++ b/WSUI.Module/View/AllFilesSettingsView.xaml
@@ -6,30 +6,23 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:Service="clr-namespace:WSUI.Module.Service"
                               mc:Ignorable="d" 
-             >
-    <Grid Margin="7" IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}" Focusable="False">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.15*"/>
-            <ColumnDefinition Width="0.55*" />
-            <ColumnDefinition Width="0.15*" />
-            <ColumnDefinition Width="0.15*"/>
-        </Grid.ColumnDefinitions>
-        
-        
-        <TabControl Grid.Column="1" Grid.ColumnSpan="2">
-            <TabItem Header="Search">
+            FocusVisualStyle="{x:Null}" >
+    <Grid Margin="0 5 0 5"  Focusable="False">
+        <TabControl Padding="0">
+            <TabItem Header="Search" >
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.55*"/>
-                        <ColumnDefinition Width="0.15*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  
                         Controls:TextboxHelper.Watermark="Enter Search Criteria"
                         Controls:TextboxHelper.ClearTextButton="True"
                         Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
-                         Grid.Column="0"/>
+                         Grid.Column="0" MinHeight="32" IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
                     <Button Command="{Binding Path=SearchCommand}" Content="Search" 
-                        Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
+                        Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" MinHeight="32"
+                            IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </TabItem>
         </TabControl>
