--- a/WSUI.Module/View/ContactSettingsView.xaml
+++ b/WSUI.Module/View/ContactSettingsView.xaml
@@ -6,23 +6,14 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:localctrl="clr-namespace:WSUI.Module.View.Controls"
                               xmlns:Service="clr-namespace:WSUI.Module.Service">
-    <Grid Margin="7" IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}" Focusable="False">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.15*"/>
-            <ColumnDefinition Width="0.55*" />
-            <ColumnDefinition Width="0.15*" />
-            <ColumnDefinition Width="0.15*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+    <Grid Margin="0 5 0 5"  Focusable="False">
 
-        <TabControl Grid.Column="1" Grid.ColumnSpan="2">
+        <TabControl Padding="0">
             <TabItem Header="Search">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.55*"/>
-                        <ColumnDefinition Width="0.15*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <Border BorderThickness="1" BorderBrush="Black">
                     <localctrl:TextboxAutoComplete SearchText="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
@@ -30,14 +21,15 @@
                                                    Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
                                        Height="24"
                                        VerticalAlignment="Top" HorizontalAlignment="Stretch"
-                                       Grid.Column="0"
-                                       />
+                                       Grid.Column="0" MinHeight="32"
+                                       IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
                     </Border>
                     <Button Command="{Binding Path=SearchCommand}" Content="Search" 
-                        Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top"  />
+                        Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Top" MinHeight="32" 
+                            IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Additional">
+            <TabItem Header="Additional" Visibility="Collapsed">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.15*"/>
