--- a/WSUI.Module/View/EmailSettingsView.xaml
+++ b/WSUI.Module/View/EmailSettingsView.xaml
@@ -5,32 +5,28 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                               xmlns:Service="clr-namespace:WSUI.Module.Service">
-    <Grid Margin="7" IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}" Focusable="False">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.15*"/>
-            <ColumnDefinition Width="0.55*" />
-            <ColumnDefinition Width="0.15*" />
-            <ColumnDefinition Width="0.15*"/>
-        </Grid.ColumnDefinitions>
+    <Grid Margin="0 5 0 5"  Focusable="False">
 
-        
-        <TabControl Grid.Column="1" Grid.ColumnSpan="2">
-            <TabItem Header="Search">
+
+        <TabControl Padding="0">
+            <TabItem Header="Search" >
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="0.55*"/>
-                        <ColumnDefinition Width="0.15*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBox Text="{Binding Path=SearchString,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                         Controls:TextboxHelper.Watermark="Enter Search Criteria"
                         Controls:TextboxHelper.ClearTextButton="True"
                              Service:KeyDownBehavior.KeyDown="{Binding KeyDownCommand}" 
-                        Grid.Column="0"/>
+                        Grid.Column="0" MinHeight="32"
+                             IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
                         <Button Command="{Binding Path=SearchCommand}" Content="Search" HorizontalAlignment="Stretch"
-                            Grid.Column="1" />
+                            Grid.Column="1" MinHeight="32"
+                                IsEnabled="{Binding Path=Enabled,UpdateSourceTrigger=PropertyChanged}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Additional">
+            <TabItem Header="Additional" Visibility="Collapsed">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.15*"/>
